--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint": "^9",
     "eslint-config-oclif": "^6",
     "eslint-config-prettier": "^10",
+    "eslint-import-resolver-typescript": "^3.8.3",
+    "eslint-plugin-import": "^2.31.0",
     "mocha": "^10",
     "oclif": "^4",
     "shx": "^0.3.3",
