--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@oclif/plugin-plugins": "^5"
   },
   "devDependencies": {
+    "@esbuild-kit/esm-loader": "^2.6.5",
     "@eslint/compat": "^1",
     "@oclif/prettier-config": "^0.2.1",
     "@oclif/test": "^4",
