Enable '@' alias support (#3);
- `./bin/run.js` resolves alias correctly

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "oclif": "^4",
     "shx": "^0.3.3",
     "ts-node": "^10",
+    "tsc-alias": "^1.8.11",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "typescript": "^5"
@@ -66,7 +67,7 @@
   },
   "repository": "machointossh/clifftop",
   "scripts": {
-    "build": "shx rm -rf dist && tsc -b",
+    "build": "shx rm -rf dist && tsc -b --force && tsc-alias",
     "lint": "eslint",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "pnpm run lint",
