Add format command to scripts (#5)

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "scripts": {
     "build": "shx rm -rf dist && tsc -b --force && tsc-alias",
     "lint": "eslint",
+    "format": "eslint --fix",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "pnpm run lint",
     "prepack": "oclif manifest && oclif readme",
