--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/mocha": "^10",
     "@types/node": "^18",
     "chai": "^4",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-oclif": "^6",
     "eslint-config-prettier": "^10",
@@ -74,7 +75,7 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "pnpm run lint",
     "prepack": "oclif manifest && oclif readme",
-    "test": "TS_NODE_PROJECT=./test/tsconfig.json mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "cross-env TS_NODE_PROJECT=./test/tsconfig.json mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
   "types": "dist/index.d.ts"
