--- a/package.json
+++ b/package.json
@@ -78,5 +78,6 @@
     "test": "cross-env TS_NODE_PROJECT=./test/tsconfig.json mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "packageManager": "pnpm@10.5.2"
 }
