--- a/.github/workflows/onPushToMain.yml
+++ b/.github/workflows/onPushToMain.yml
@@ -32,8 +32,15 @@ jobs:
       - name: Setup git
         if: ${{ steps.version-check.outputs.skipped == 'false' }}
         run: |
-          git config --global user.email ${{ secrets.GH_EMAIL }}
-          git config --global user.name ${{ secrets.GH_USERNAME }}
+          git config --global user.email $USER_EMAIL
+          git config --global user.name $USER_NAME
+        env:
+          # Let `github-actions[bot]` commit this release
+          # - https://github.com/orgs/community/discussions/26560#discussioncomment-3531273
+          # - https://github.com/orgs/community/discussions/26560#discussioncomment-3252339
+          # - https://github.com/actions/checkout/pull/1707
+          USER_EMAIL: "41898282+github-actions[bot]@users.noreply.github.com"
+          USER_NAME: "github-actions[bot]"
       - name: Generate oclif README
         if: ${{ steps.version-check.outputs.skipped == 'false' }}
         id: oclif-readme
