Test 'fix/16-fix-workflow-version-tag-release' branch

--- a/.github/workflows/onPushToMain.yml
+++ b/.github/workflows/onPushToMain.yml
@@ -3,7 +3,9 @@ name: version, tag and github release
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+      - test/16-fix-workflow-version-tag-release
 
 jobs:
   release:
