Install with --frozen-lockfile option

--- a/.github/workflows/onPushToMain.yml
+++ b/.github/workflows/onPushToMain.yml
@@ -45,7 +45,7 @@ jobs:
         if: ${{ steps.version-check.outputs.skipped == 'false' }}
         id: oclif-readme
         run: |
-          pnpm install
+          pnpm install --frozen-lockfile
           pnpm run readme
           if [ -n "$(git status --porcelain)" ]; then
             git add .
