--- a/.github/workflows/onPushToMain.yml
+++ b/.github/workflows/onPushToMain.yml
@@ -7,10 +7,22 @@ on:
 
 jobs:
   release:
+    strategy:
+      matrix:
+        os: ['ubuntu-latest']
+        node_version: ['22.14.0']
+      fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Install the latest corepack and enable pnpm
+        run: |
+          npm install -g corepack@latest
+          corepack enable pnpm
       - uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node_version }}
+          cache: pnpm
       - name: Check if version already exists
         id: version-check
         run: |
