--- a/.github/workflows/onPushToMain.yml
+++ b/.github/workflows/onPushToMain.yml
@@ -7,11 +7,6 @@ on:
 
 jobs:
   release:
-    strategy:
-      matrix:
-        os: ['ubuntu-latest']
-        node_version: ['22.14.0']
-      fail-fast: false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,7 +16,7 @@ jobs:
           corepack enable pnpm
       - uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: '22.14.0'
           cache: pnpm
       - name: Check if version already exists
         id: version-check
