Move some rules in `eslint.config.json` to `.prettierrc.json` (#23)

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,9 @@
-"@oclif/prettier-config"
+{
+  "singleQuote": true,
+  "printWidth": 100,
+  "endOfLine": "auto",
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "trailingComma": "all",
+  "semi": true
+}
