Pleace default formatter in `.vscode/settings.json` (#23)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,11 @@
 {
+	"editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
+	"editor.formatOnType": false,
+	"editor.formatOnPaste": true,
 	"editor.formatOnSave": true,
-	"[javascript]": {
-		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
-	},
-	"[typescript]": {
-		"editor.defaultFormatter": "dbaeumer.vscode-eslint"
-	},
-	"editor.formatOnSaveMode": "modificationsIfAvailable",
-	"editor.codeActionsOnSave": {
-		"source.fixAll.eslint": "explicit"
-	},
+	"editor.formatOnSaveMode": "file",
+	"files.autoSave": "onFocusChange",
+	"vs-code-prettier-eslint.prettierLast": false,
 	"eslint.validate": [
 		"javascript",
 		"typescript"
