--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-import": "^2.31.0",
     "mocha": "^10",
     "oclif": "^4",
+    "prettier": "^3.5.3",
+    "prettier-eslint": "^16.3.0",
     "shx": "^0.3.3",
     "ts-node": "^10",
     "tsc-alias": "^1.8.11",
@@ -71,7 +73,7 @@
     "readme": "oclif readme --readme-path=docs/README.md",
     "build": "shx rm -rf dist && tsc -b --force && tsc-alias",
     "lint": "eslint",
-    "format": "eslint --fix",
+    "format": "prettier src/ test/ --write && eslint --fix",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "pnpm run lint",
     "prepack": "oclif manifest && pnpm run doc",
